# palautusrepositorio

./: README.md
viikko1/nhl-statistics-1/: .coverage
viikko1/nhl-statistics-1/src/: index.py  statistics_service.py
viikko1/nhl-statistics-1/src/tests/: statistics_service_test.py
viikko2/nhl-reader/: README.md  pyproject.toml
viikko2/nhl-reader/src/: index.py  player.py  playerReader.py  playerStats.py
viikko2/poetry-web/: pyproject.toml
viikko2/project-reader/src/: project.py  project_reader.py
