[tool.poetry]
name = "nhl-reader"
version = "0.1.0"
description = ""
authors = ["Pii Sainio <pii.sainio@helsinki.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
